# langgraph-hitl-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  main.py  redis_client.py
app/api/: approvals.py  audit.py  rfp.py
app/graph/: builder.py  checkpointer.py  nodes.py  state.py
app/models/: audit.py  schemas.py
app/services/: llm.py  observability.py  retry.py
app/utils/: logger.py
migrations/: 001_initial.sql
tests/: conftest.py  test_api.py  test_graph_unit.py  test_integration.py  test_retry_budget.py
