[project]
name = "langgraph-hitl-agent"
version = "0.1.0"
description = "Production-grade Human-in-the-Loop RFP analyzer with LangGraph"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires a running Postgres + Redis",
]
addopts = "-ra --strict-markers"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
